# EasySchedule

./: .gitignore  .gitmodules  EasySchedule.sln  LICENSE
EasySchedule/: CMakeLists.txt  EasySchedule.cpp  EasySchedule.vcxproj  EasySchedule.vcxproj.filters
EasySchedule/Converter/: serializer.h
EasySchedule/CustomControl/: Expander.cpp  Expander.h  ListBox.cpp  ListBox.h  QListBox.hpp  TabControl.cpp  TabControl.h  TabControl.hpp
EasySchedule/Model/: CustomDataStructures.cpp  CustomDataStructures.h  DataModel.cpp  DataModel.h
EasySchedule/View/: AllScheduleView.cpp  AllScheduleView.h  AllScheduleView.hpp  ConfigView.cpp  ConfigView.h  MainWindowView.cpp  MainWindowView.h  NewScheduleView.cpp  NewScheduleView.h  SingleScheduleView.cpp  SingleScheduleView.h  TodayScheduleView.cpp  TodayScheduleView.h  TodayScheduleView.hpp
EasySchedule/ViewModel/: ScheduleViewModel.cpp  ScheduleViewModel.h
